More layout fixes, removing horizontal scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ hr.blue {
 }
 
 .spacermainlogo {
-    height: 220px;
+    height: 170px;
 
 }
 
